custom_sales_territory_management/force-app/main/default/objects/cstm_AccountHistory__c/cstm_AccountHistory__c.object-meta.xml
<CustomObject>
    <label>cstm_AccountHistory</label>
    <nameField>
        <label>AccountHistory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>cstm_AccountsHistory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>