custom_sales_territory_management/force-app/main/default/objects/cstm_AccountHistory__c/fields/Accounts__c.field-meta.xml
<CustomField>
    <fullName>Accounts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accounts</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>cstm_AccountsHistory</relationshipLabel>
    <relationshipName>cstm_AccountsHistory</relationshipName>
    <type>Lookup</type>
</CustomField>