custom_sales_territory_management/force-app/main/default/objects/cstm_AccountHistory__c/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <label>Field</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>