custom_sales_territory_management/force-app/main/default/objects/cstm_AccountHistory__c/fields/OldValue__c.field-meta.xml
<CustomField>
    <fullName>OldValue__c</fullName>
    <label>OldValue</label>
    <length>100</length>
    <type>Text</type>
</CustomField>