custom_sales_territory_management/force-app/main/default/objects/cstm_AccountHistory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Accounts__c</columns>
    <columns>Field__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OldValue__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Accounts History</label>
</ListView>